Fix issue #1038 Add scrollbar to adventure
Added a scrollbar to adventures, now they all have a max-length. The boxes are not "hopping" anymore between levels unless the adventure contains a short text. I could implement a minimum height too to prevent the "hopping" completely.

--- a/static/css/additional.css
+++ b/static/css/additional.css
@@ -14,3 +14,8 @@
 .ace_mobile-menu {
   display: none;
 }
+
+.bg-white.p-4.mb-8.shadow-md.turn-pre-into-ace {
+  max-height: 20em;
+  overflow: scroll;
+}
